--- a/html/p/inb.html
+++ b/html/p/inb.html
@@ -6,7 +6,7 @@
         <i class="fa fa-gear"></i>
     </div>
     <div class="color-palate-head">
-        <h6>Choose Your Color</h6>
+        <h6>色调切换</h6>
     </div>
     <div class="various-color clearfix">
         <div class="colors-list">
@@ -24,6 +24,8 @@
 			<span class="palate color-twelve" data-theme-file="{$maccms.path_tpl}css/color-themes/theme-twelve.css"></span>
         </div>
     </div>
+	
+	
 
 </div>
 <script src="{$maccms.path_tpl}js/jquery.js"></script>
