--- a/html/p/ha.html
+++ b/html/p/ha.html
@@ -1,12 +1,9 @@
 
-		<li><a href="index.html"><i class="icon flaticon-home"></i> <span><i class="flaticon-home"></i> Home</span></a></li>
-		<li><a href="course-lesson.html"><i class="icon flaticon-book"></i> <span><i class="flaticon-book"></i>Course Lesson</span></a></li>
-		<li><a href="category.html"><i class="icon flaticon-test"></i> <span><i class="flaticon-test"></i>Categories</span></a></li>
-		<li><a href="dashboard.html"><i class="icon flaticon-report"></i> <span><i class="flaticon-report"></i>Dashboard</span></a></li>
-		<li><a href="manage-course.html"><i class="icon flaticon-test"></i> <span><i class="flaticon-test"></i>Manage Course</span></a></li>
-		<li><a href="earning.html"><i class="icon flaticon-pie-chart-1"></i> <span><i class="flaticon-pie-chart-1"></i>Earning</span></a></li>
-		<li><a href="enrolled-courses.html"><i class="icon flaticon-file"></i> <span><i class="flaticon-file"></i>Enrolled Courses</span></a></li>
-		<li><a href="certificate.html"><i class="icon flaticon-new-window"></i> <span><i class="flaticon-new-window"></i>Certificate</span></a></li>
-		<li><a href="team.html"><i class="icon flaticon-file"></i> <span><i class="flaticon-file"></i>Instructors</span></a></li>
-        <li><a href="contact.html"><i class="icon flaticon-contact"></i> <span><i class="flaticon-contact"></i>Contact Us</span></a></li>
-		<li><a href="help.html"><i class="icon flaticon-information"></i> <span><i class="flaticon-information"></i>Help</span></a></li>
+		<li><a href="/"><i class="icon flaticon-home"></i> <span><i class="flaticon-home"></i> Home</span></a></li>
+{maccms:type ids="" order="asc" by="sort" id="vo1" key="key1"}
+{if condition="$key1 lt 3"}
+		<li><a href="{:mac_url_type($vo1)}"><i class="icon flaticon-book"></i> <span><i class="flaticon-book"></i>{$vo1.type_name}</span></a></li>
+		
+		
+{/if}
+{/maccms:type}	
