--- a/html/p/ina.html
+++ b/html/p/ina.html
@@ -1,3 +1,9 @@
+<link href="{$maccms.path}static/css/home.css" rel="stylesheet" type="text/css" />
+<script src="{$maccms.path}static/js/jquery.js"></script>
+<script src="{$maccms.path}static/js/jquery.lazyload.js"></script>
+<script src="{$maccms.path}static/js/jquery.autocomplete.js"></script>
+<script>var maccms={"path":"__ROOT__","mid":"{$maccms['mid']}","aid":"{$maccms['aid']}","url":"{$maccms['site_url']}","wapurl":"{$maccms['site_wapurl']}","mob_status":"{$maccms['mob_status']}"};</script>
+<script src="{$maccms.path}static/js/home.js"></script>
 <!-- Stylesheets -->
 <link href="{$maccms.path_tpl}css/bootstrap.css" rel="stylesheet">
 <link href="{$maccms.path_tpl}css/main.css" rel="stylesheet">
