--- a/html/p/fa.html
+++ b/html/p/fa.html
@@ -35,10 +35,11 @@
                             <div class="footer-column col-lg-5 col-md-6 col-sm-12">
                                 <div class="footer-widget links-widget">
 									<ul class="links-widget">
-										<li><a href="/">首页</a></li>
+										<li><a>分类</a></li>
+										<a href="/">首页</a>
 									{maccms:type ids="" order="asc" by="sort" id="vo1" key="key1"}
 									{if condition="$key1 lt 3"}
-										<li><a href="{:mac_url_type($vo1)}">{$vo1.type_name}</a></li>
+										<a href="{:mac_url_type($vo1)}">{$vo1.type_name}</a>
 									{/if}
 									{/maccms:type}
 										
@@ -57,11 +58,10 @@
                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget links-widget">
 									<ul class="links-widget">
-										<li><a href="#">Privacy Policy</a></li>
-										<li><a href="#">Support Area</a></li>
-										<li><a href="#">Documentations</a></li>
-										<li><a href="#">How it works</a></li>
-										<li><a href="#">Terms of Policy</a></li>
+									<li><a>热搜</a></li>
+										{maccms:foreach name=":explode(',',$maccms.search_hot)" id="vo2" key="key2"}
+										<a href="{:mac_url('vod/search',['wd'=>$vo2])}">{$vo2}</a>
+										{/maccms:foreach}
 									</ul>
 								</div>
 							</div>
@@ -70,11 +70,10 @@
                             <div class="footer-column col-lg-6 col-md-6 col-sm-12">
                                 <div class="footer-widget links-widget">
 									<ul class="links-widget">
-										<li><a href="#">home</a></li>
-										<li><a href="#">About us</a></li>
-										<li><a href="#">Features</a></li>
-										<li><a href="#">Pricing</a></li>
-										<li><a href="#">Contact</a></li>
+									<li><a>随机推荐</a></li>
+										{maccms:vod order="desc" by="rnd" num="5"  type="current" }
+										<a href="{:mac_url_vod_detail($vo)}">{$vo.vod_name}</a>
+										{/maccms:vod}
 									</ul>
 								</div>
 							</div>
