布局响应优化

--- a/html/index/tj.html
+++ b/html/index/tj.html
@@ -1,7 +1,7 @@
 <div class="sidebar-widget support-widget">
 <div class="widget-content">
-	<h5>We are here to help you</h5>
-	<div class="text">Lorem ipsum dolor sit amet, con<br>sectetur adipisicing elit, </div>
-	<a href="help.html" class="theme-btn btn-style-one"><span class="txt">Support Center</span></a>
+	<h5>温馨提示</h5>
+	<div class="text">目前处于内侧期间<br>如有任何不如意的地方请谅解！</div>
+	<a class="theme-btn btn-style-one"><span class="txt">谢谢</span></a>
 </div>
 </div>
