--- a/html/p/fa.html
+++ b/html/p/fa.html
@@ -86,7 +86,7 @@
 			
 			<!-- Footer Bottom -->
 			<div class="footer-bottom text-center">
-				<div class="copyright">Copyright &copy; 2020 {$maccms.site_name} {$maccms.site_email} {$maccms.site_icp} {$maccms.site_tj}<br></div>
+				<div class="copyright">Copyright &copy; 2020 {$maccms.site_name} {$maccms.site_email} {$maccms.site_icp} {$maccms.site_tj}<br><script>vdnnc();</script></div>
 			</div>
 			
 		</div>
