--- a/html/p/ina.html
+++ b/html/p/ina.html
@@ -5,7 +5,6 @@
 <script>var maccms={"path":"__ROOT__","mid":"{$maccms['mid']}","aid":"{$maccms['aid']}","url":"{$maccms['site_url']}","wapurl":"{$maccms['site_wapurl']}","mob_status":"{$maccms['mob_status']}"};</script>
 <script src="{$maccms.path}static/js/home.js"></script>
 <!-- Stylesheets -->
-<link href="{$maccms.path_tpl}css/bootstrap.css" rel="stylesheet">
 <link href="{$maccms.path_tpl}css/main.css" rel="stylesheet">
 <link href="{$maccms.path_tpl}css/responsive.css" rel="stylesheet">
 <!-- Color Switcher Mockup -->
@@ -19,6 +18,6 @@
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
+<script src="{$maccms.path_tpl}js/js.js"></script>
 <!--[if lt IE 9]><script src="{$maccms.path_tpl}js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="{$maccms.path_tpl}js/respond.js"></script><![endif]-->
