--- a/html/p/h.html
+++ b/html/p/h.html
@@ -49,7 +49,7 @@
 										{if condition="$key1 lt 3"}
 										<li class="dropdown"><a href="#">{$vo1.type_name}</a>
 											<ul>
-												{maccms:type parent="'.$vo1['type_id'].'" order="asc" by="sort" id="vo2" key="key2"}
+												{maccms:type parent="'.$vo1['type_id'].'" order="asc" num="12" by="sort" id="vo2" key="key2"}
 												<li><a href="{:mac_url_type($vo2,[],'show')}">{$vo2.type_name}</a></li>
 												{/maccms:type}
 											</ul>
