--- a/html/index/taga.html
+++ b/html/index/taga.html
@@ -7,7 +7,7 @@
 		</div>
 		<div class="content">
 			<ul>
-				{maccms:type parent="'.$vo1['type_id'].'" order="asc" by="sort" id="vo2" key="key2"}
+				{maccms:type parent="'.$vo1['type_id'].'" num="100" order="asc" by="sort" id="vo2" key="key2"}
 				<li><a href="{:mac_url_type($vo2,[],'show')}">{$vo2.type_name}</a></li>
 				{/maccms:type}
 			</ul>
