--- a/html/p/hb.html
+++ b/html/p/hb.html
@@ -7,7 +7,7 @@
 {if condition="$key1 lt 3"}
 		<div class="heading">{$vo1.type_name}</div>
 		<ul class="pages-list">
-			{maccms:type parent="'.$vo1['type_id'].'" order="asc" by="sort" id="vo2" key="key2"}			
+			{maccms:type parent="'.$vo1['type_id'].'" order="asc" num="100" by="sort" id="vo2" key="key2"}			
 			<li><a href="{:mac_url_type($vo2,[],'show')}"><span class="icon flaticon-scholarship"></span>{$vo2.type_name}</a></li>
 			{/maccms:type}
 		</ul>
