移动端独立搜索模块文件增加

--- a/html/p/h.html
+++ b/html/p/h.html
@@ -66,11 +66,11 @@
 						<!-- Options Box -->
 						<div class="options-box clearfix">
 							
-							<!-- Message Box -->
+							<!-- mSoA -->
 							<div class="message-box">
-								<a href="" class="icon flaticon-envelope"></a>
+								<a href="{:mac_url('label/so')}" class=""><img src="{$maccms.path_tpl}images/so.svg" title="搜索一下" title="" width="20px" height="21px"></a>
 							</div>
-							<!-- End Message Box -->
+							<!-- mAoB -->
 							
 							<!-- Notification Box -->
 							<div class="notification-box">
