修复移动端无搜索功能

--- a/html/p/h.html
+++ b/html/p/h.html
@@ -68,7 +68,7 @@
 							
 							<!-- mSoA -->
 							<div class="message-box">
-								<a href="{:mac_url('label/so')}" class=""><img src="{$maccms.path_tpl}images/so.svg" title="搜索一下" title="" width="20px" height="21px"></a>
+								<a href="{:mac_url('label/so')}" ><img src="{$maccms.path_tpl}images/so.svg" title="搜索一下" title="" width="20px" height="21px" ></a>
 							</div>
 							<!-- mAoB -->
 							
