增加Sitemap文件/txt/html/xml 访问地址：（域名/rss/sitemap.后缀）

--- a/html/p/fa.html
+++ b/html/p/fa.html
@@ -86,7 +86,9 @@
 			
 			<!-- Footer Bottom -->
 			<div class="footer-bottom text-center">
-				<div class="copyright">Copyright &copy; 2020 {$maccms.site_name} {$maccms.site_email} {$maccms.site_icp} {$maccms.site_tj}<br><script>vdnnc();</script></div>
+				<div class="copyright">Copyright &copy; 2020 {$maccms.site_name} {$maccms.site_email} {$maccms.site_icp} {$maccms.site_tj}<br>
+                 <a href="/rss/sitemap.html" target="_blank">Sitemap.Html</a>／<a href="/rss/sitemap.xml" target="_blank">Sitemap.Xml</a>／<a href="/rss/sitemap.txt" target="_blank">Sitemap.Txt</a><br>
+                  <script>vdnnc();</script></div>
 			</div>
 			
 		</div>
