优化视频类模块下拉菜单

--- a/html/txt/vod.html
+++ b/html/txt/vod.html
@@ -22,10 +22,10 @@
 										<div class="eps_dots more_dropdown">
 											<a href="#"><span></span><i></i></a>
 											<div class="dropdown-content">
-												<span><i class='flaticon-share'></i>Share</span>
-												<span><i class="flaticon-down-arrow-1"></i>Save</span>
-												<span><i class='flaticon-cancel'></i>Not Interested</span>
-												<span><i class="flaticon-edit-2"></i>Report</span>
+												<span><i class='flaticon-share'></i>{$vo.vod_remarks}</span>
+												<span><i class="flaticon-down-arrow-1"></i>{$vo.vod_time|date='m-d H:i',###}</span>
+												<span><i class='flaticon-cancel'></i>{$vo.type.type_name}</span>
+												<span><i class="flaticon-edit-2"></i>{$vo.vod_director}</span>
 											 </div>																										
 										</div>
 										
