--- a/html/vod/voddetail.html
+++ b/html/vod/voddetail.html
@@ -49,6 +49,7 @@
 							<div class="buttons-box">
 								<a href="#play" class="theme-btn btn-style-two"><span class="txt">在线播放</span></a>
 								<a href="#lxxz" class="theme-btn btn-style-one"><span class="txt">离线缓存</span></a>
+                              <a href="javascript:void(0);" style="cursor:hand" class="mac_ulog" data-type="2" data-mid="{$maccms.mid}" data-id="{$obj.vod_id}"><span class="txt">我要收藏</span></a>
 							</div>
 						</div>
 					</div>
